# eisy

./: README.md  pyproject.toml
examples/: example_data.csv  quickstart.ipynb
src/eisy/: __init__.py  app.py
src/eisy/core/: elements.py  fitting.py  parsing.py
src/eisy/data/: models.py  synthetic.py  utils.py
src/eisy/templates/: index.html
src/eisy/templates/static/css/: styles.css
src/eisy/templates/static/js/: circuit_diagram.js  main.js
src/eisy/web/: routes.py  validation.py  web_utils.py
